# music_sync_backend

./: .coderabbit.yaml  .env  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: static.yml
docs/infrastructure/: aws_infrastructure.drawio
docs/spectaql/: config.yaml  schema.graphql
docs/spectaql/output/: index.html
migrations/: 20240602153938_init.sql
openapi/: openapi.yaml
src/: QueryRootResolver.rs  domain_model.rs  domain_service.rs  infrastructure.rs  main.rs  resolver.rs
src/domain-model/: README.md
src/domain-model/MusicLibrary/: MusicLibrary.rs
src/domain-model/Room/: Room.rs
src/domain-model/User/: GuestUser.rs  RegisteredUser.rs  User.rs  registered_user.rs
src/domain-service/: RoomRepositoryTrait.rs  UserRepositoryTrait.rs  music_library?repository_trait.rs
src/domain_model/: music_library.rs  room.rs  user.rs
src/domain_model/music_library/: music_library.rs
src/domain_model/room/: room.rs  room_updated.rs  value_object.rs
src/domain_model/user/: guest_user.rs  registered_user.rs  user.rs  (+1 more)
src/domain_service/: music_library_repository_trait.rs  room_repository_trait.rs  user_repository_trait.rs
src/infrastructure/: music_library_repository.rs  room_repository.rs  user_repository.rs
src/presentation/: controller.rs
src/resolver/: mutation_root_resolver.rs  query_root_resolver.rs  subscription_root_resolver.rs
terraform/: .env.aws-credentials.exsample  README.md
terraform/aws_ecs/: README.md
terraform/cloud_run/: README.md
(+50 files in other folders)
