[package]
name = "music_sync_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Webアプリケーションフレームワーク
axum = "0.7.5"
#http用
hyper = { version = "1.2.0", features = ["full"] }
#json
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
#非同期ランタイム
tokio = { version = "1.37.0", features = ["full"] }
#mime
mime = "0.3.17"
#サーバー構築
tower = "0.4.13"
#ログ・デバッグ
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
#Result用
thiserror = "1.0.58"
anyhow = "1.0.81"
#sql
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "mysql"] }
#乱数
rand = "0.8.5"
#graphql
async-graphql = "7.0.5"